@@ -7,6 +7,7 @@ Generic changes/fixes
 Device specific changes/fixes
 	* HoTTAdapter* - display always given GPS version value, even if this does not match known measurement placements
 	* HoTTAdapter* - evaluate byte, byte, byte, short, short, short, byte for unknown GPS (version 2,3,5 - 99)
+	* HoTTAdapter* - evaluate AirSpeed provided by SM MicroVario, SM GPS-Logger3
 	* Core-Telemetry - fix assignment of parsed data with modified name (duplication)
 	* Weatronic-Telemetry - add error handling for corrupt log files
 
